--- a/references.bib
+++ b/references.bib
@@ -130,3 +130,17 @@ Publisher: SciELO Public Health}
 	edition = {Fourth edition},
 	address = {Burlington, Massachusetts}
 }
+
+@article{pearce2018,
+	title = {Bias in matched case{\textendash}control studies: DAGs are not enough},
+	author = {Pearce, Neil},
+	year = {2018},
+	month = {01},
+	date = {2018-01-01},
+	journal = {European Journal of Epidemiology},
+	pages = {1--4},
+	volume = {33},
+	number = {1},
+	doi = {10.1007/s10654-018-0362-3},
+	url = {https://doi.org/10.1007/s10654-018-0362-3}
+}
